support bundling different jre images (msi)