@@ -170,8 +170,18 @@
     <appmacro app="RunAs64" cfg="runas" bits="64"/>
   </target>
 
-  <target name="jre" description="build JRE for bundled JRE builds">
-    <exec command="jlink --modulepath ${env.JAVA_HOME}/jmods --addmods java.base,java.desktop --output jre"/>
+  <target name="jre-base-desktop" description="build JRE for bundled JRE builds with desktop (swing) support">
+    <exec command="jlink --module-path ${env.JAVA_HOME}/jmods --add-modules java.base,java.desktop --output jre_base_desktop"/>
+    <delete>
+      <fileset dir="jre_base_desktop/bin" includes="java**.exe"/>
+    </delete>
+  </target>
+
+  <target name="jre-base" description="build JRE for bundled JRE builds with only base">
+    <exec command="jlink --module-path ${env.JAVA_HOME}/jmods --add-modules java.base --output jre_base"/>
+    <delete>
+      <fileset dir="jre_base/bin" includes="java**.exe"/>
+    </delete>
   </target>
 
   <target name="clean" description="deletes compiled files">
